[package]
authors = ["Domichain Maintainers <maintainers@domichain.foundation>"]
edition = "2021"
name = "domichain-cli-wasm"
description = "Blockchain, Rebuilt for Scale"
version = "1.11.1"
repository = "https://Domino-Blockchain/domichain"
license = "Apache-2.0"
homepage = "https://domichain.com/"
documentation = "https://docs.rs/domichain-cli"

[dependencies]
bincode = "1.3.3"
bs58 = "0.4.0"
clap = "2.33.1"
console = "0.15.0"
const_format = "0.2.25"
criterion-stats = "0.3.0"
crossbeam-channel = "0.5"
ctrlc = { version = "3.2.2", features = ["termination"] }
humantime = "2.0.1"
log = "0.4.17"
num-traits = "0.2"
pretty-hex = "0.3.0"
reqwest = { version = "0.11.10", default-features = false, features = ["blocking", "rustls-tls", "json"] }
semver = "1.0.9"
serde = "1.0.137"
serde_derive = "1.0.103"
serde_json = "1.0.81"
domichain-account-decoder = { path = "../account-decoder", version = "=1.11.1" }
domichain-bpf-loader-program = { path = "../programs/bpf_loader", version = "=1.11.1" }
domichain-wasm-loader-program = { path = "../programs/wasm_loader", version = "=1.11.1" }
domichain-clap-utils = { path = "../clap-utils", version = "=1.11.1" }
domichain-cli-config = { path = "../cli-config", version = "=1.11.1" }
domichain-cli-output = { path = "../cli-output", version = "=1.11.1" }
domichain-client = { path = "../client", version = "=1.11.1" }
domichain-config-program = { path = "../programs/config", version = "=1.11.1" }
domichain-faucet = { path = "../faucet", version = "=1.11.1" }
domichain-logger = { path = "../logger", version = "=1.11.1" }
domichain-program-runtime = { path = "../program-runtime", version = "=1.11.1" }
domichain-remote-wallet = { path = "../remote-wallet", version = "=1.11.1" }
domichain-sdk = { path = "../sdk", version = "=1.11.1" }
domichain-transaction-status = { path = "../transaction-status", version = "=1.11.1" }
domichain-version = { path = "../version", version = "=1.11.1" }
domichain-vote-program = { path = "../programs/vote", version = "=1.11.1" }
solana_rbpf = "=0.2.31"
spl-memo = { version = "=3.0.1", features = ["no-entrypoint"] }
thiserror = "1.0.31"
tiny-bip39 = "0.8.2"
wasmi = "0.29.0"

[dev-dependencies]
domichain-streamer = { path = "../streamer", version = "=1.11.1" }
domichain-test-validator = { path = "../test-validator", version = "=1.11.1" }
tempfile = "3.3.0"

[[bin]]
name = "domichain-wasm"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
