[package]
name = "domichain-client-test"
version = "1.11.1"
description = "Domichain RPC Test"
authors = ["Domichain Maintainers <maintainers@domichain.foundation>"]
repository = "https://Domino-Blockchain/domichain"
license = "Apache-2.0"
homepage = "https://domichain.com/"
documentation = "https://docs.rs/domichain-client-test"
edition = "2021"
publish = false

[dependencies]
futures-util = "0.3.21"
serde_json = "1.0.81"
serial_test = "0.6.0"
domichain-client = { path = "../client", version = "=1.11.1" }
domichain-ledger = { path = "../ledger", version = "=1.11.1" }
domichain-measure = { path = "../measure", version = "=1.11.1" }
domichain-merkle-tree = { path = "../merkle-tree", version = "=1.11.1" }
domichain-metrics = { path = "../metrics", version = "=1.11.1" }
domichain-perf = { path = "../perf", version = "=1.11.1" }
domichain-rayon-threadlimit = { path = "../rayon-threadlimit", version = "=1.11.1" }
domichain-rpc = { path = "../rpc", version = "=1.11.1" }
domichain-runtime = { path = "../runtime", version = "=1.11.1" }
domichain-sdk = { path = "../sdk", version = "=1.11.1" }
domichain-streamer = { path = "../streamer", version = "=1.11.1" }
domichain-test-validator = { path = "../test-validator", version = "=1.11.1" }
domichain-transaction-status = { path = "../transaction-status", version = "=1.11.1" }
domichain-version = { path = "../version", version = "=1.11.1" }
systemstat = "0.1.11"
tokio = { version = "~1.14.1", features = ["full"] }

[dev-dependencies]
domichain-logger = { path = "../logger", version = "=1.11.1" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
