[package]
name = "domichain-client-test"
description = "Domichain RPC Test"
documentation = "https://docs.rs/domichain-client-test"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
futures-util = { workspace = true }
serde_json = { workspace = true }
domichain-ledger = { workspace = true }
domichain-measure = { workspace = true }
domichain-merkle-tree = { workspace = true }
domichain-metrics = { workspace = true }
domichain-perf = { workspace = true }
domichain-pubsub-client = { workspace = true }
domichain-rayon-threadlimit = { workspace = true }
domichain-rpc = { workspace = true }
domichain-rpc-client = { workspace = true }
domichain-rpc-client-api = { workspace = true }
domichain-runtime = { workspace = true }
domichain-sdk = { workspace = true }
domichain-streamer = { workspace = true }
domichain-test-validator = { workspace = true }
domichain-transaction-status = { workspace = true }
domichain-version = { workspace = true }
systemstat = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tungstenite = { workspace = true, features = ["rustls-tls-webpki-roots"] }

[dev-dependencies]
domichain-logger = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
