[package]
name = "domichain-client"
description = "Domichain Client"
documentation = "https://docs.rs/domichain-client"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
async-trait = { workspace = true }
bincode = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
indexmap = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
quinn = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
domichain-connection-cache = { workspace = true }
domichain-measure = { workspace = true }
domichain-metrics = { workspace = true }
domichain-pubsub-client = { workspace = true }
domichain-quic-client = { workspace = true }
domichain-rpc-client = { workspace = true, features = ["default"] }
domichain-rpc-client-api = { workspace = true }
domichain-rpc-client-nonce-utils = { workspace = true }
domichain-sdk = { workspace = true }
domichain-streamer = { workspace = true }
domichain-thin-client = { workspace = true }
domichain-tpu-client = { workspace = true, features = ["default"] }
domichain-udp-client = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
crossbeam-channel = { workspace = true }
rand_chacha = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
