[package]
name = "domichain-core"
description = "Blockchain, Rebuilt for Scale"
version = "1.11.1"
homepage = "https://domichain.com/"
documentation = "https://docs.rs/domichain-core"
readme = "../README.md"
repository = "https://Domino-Blockchain/domichain"
authors = ["Domichain Maintainers <maintainers@domichain.foundation>"]
license = "Apache-2.0"
edition = "2021"

[badges]
codecov = { repository = "domichain-labs/domichain", branch = "master", service = "github" }

[dependencies]
ahash = "0.7.6"
base64 = "0.13.0"
bincode = "1.3.3"
bs58 = "0.4.0"
chrono = { version = "0.4.11", features = ["serde"] }
crossbeam-channel = "0.5"
dashmap = { version = "4.0.2", features = ["rayon", "raw-api"] }
etcd-client = { version = "0.8.1", features = ["tls"] }
fs_extra = "1.2.0"
histogram = "0.6.9"
itertools = "0.10.3"
lazy_static = "1.4.0"
log = "0.4.17"
lru = "0.7.7"
min-max-heap = "1.3.0"
rand = "0.7.0"
rand_chacha = "0.2.2"
rayon = "1.5.3"
serde = "1.0.137"
serde_derive = "1.0.103"
domichain-address-lookup-table-program = { path = "../programs/address-lookup-table", version = "=1.11.1" }
domichain-bloom = { path = "../bloom", version = "=1.11.1" }
domichain-client = { path = "../client", version = "=1.11.1" }
domichain-entry = { path = "../entry", version = "=1.11.1" }
domichain-frozen-abi = { path = "../frozen-abi", version = "=1.11.1" }
domichain-frozen-abi-macro = { path = "../frozen-abi/macro", version = "=1.11.1" }
domichain-geyser-plugin-manager = { path = "../geyser-plugin-manager", version = "=1.11.1" }
domichain-gossip = { path = "../gossip", version = "=1.11.1" }
domichain-ledger = { path = "../ledger", version = "=1.11.1" }
domichain-measure = { path = "../measure", version = "=1.11.1" }
domichain-metrics = { path = "../metrics", version = "=1.11.1" }
domichain-net-utils = { path = "../net-utils", version = "=1.11.1" }
domichain-perf = { path = "../perf", version = "=1.11.1" }
domichain-poh = { path = "../poh", version = "=1.11.1" }
domichain-program-runtime = { path = "../program-runtime", version = "=1.11.1" }
domichain-rayon-threadlimit = { path = "../rayon-threadlimit", version = "=1.11.1" }
domichain-rpc = { path = "../rpc", version = "=1.11.1" }
domichain-runtime = { path = "../runtime", version = "=1.11.1" }
domichain-sdk = { path = "../sdk", version = "=1.11.1" }
domichain-send-transaction-service = { path = "../send-transaction-service", version = "=1.11.1" }
domichain-streamer = { path = "../streamer", version = "=1.11.1" }
domichain-transaction-status = { path = "../transaction-status", version = "=1.11.1" }
domichain-version = { path = "../version", version = "=1.11.1" }
domichain-vote-program = { path = "../programs/vote", version = "=1.11.1" }
libvrf = { path = "../libvrf", version = "=0.1.0" }
sortition = { path = "../sortition", version = "=0.1.0" }
sys-info = "0.9.1"
tempfile = "3.3.0"
thiserror = "1.0"
tokio = { version = "~1.14.1", features = ["full"] }
trees = "0.4.2"

[dev-dependencies]
matches = "0.1.9"
raptorq = "1.7.0"
reqwest = { version = "0.11.10", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde_json = "1.0.81"
serial_test = "0.6.0"
domichain-logger = { path = "../logger", version = "=1.11.1" }
domichain-program-runtime = { path = "../program-runtime", version = "=1.11.1" }
domichain-stake-program = { path = "../programs/stake", version = "=1.11.1" }
static_assertions = "1.1.0"
systemstat = "0.1.11"

[target."cfg(unix)".dependencies]
sysctl = "0.4.4"

[build-dependencies]
rustc_version = "0.4"

[[bench]]
name = "banking_stage"

[[bench]]
name = "cluster_info"

[[bench]]
name = "gen_keys"

[[bench]]
name = "sigverify_stage"

[[bench]]
name = "retransmit_stage"

[[bench]]
name = "unprocessed_packet_batches"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
