[package]
name = "domichain-core"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/domichain-core"
readme = "../README.md"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[badges]
codecov = { repository = "domichain-labs/domichain", branch = "master", service = "github" }

[dependencies]
base64 = { workspace = true }
bincode = { workspace = true }
bs58 = { workspace = true }
chrono = { workspace = true, features = ["default", "serde"] }
crossbeam-channel = { workspace = true }
dashmap = { workspace = true, features = ["rayon", "raw-api"] }
eager = { workspace = true }
etcd-client = { workspace = true, features = ["tls"] }
histogram = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
lru = { workspace = true }
min-max-heap = { workspace = true }
num_enum = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rayon = { workspace = true }
rolling-file = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
domichain-address-lookup-table-program = { workspace = true }
domichain-bloom = { workspace = true }
domichain-client = { workspace = true }
domichain-entry = { workspace = true }
domichain-frozen-abi = { workspace = true }
domichain-frozen-abi-macro = { workspace = true }
domichain-geyser-plugin-manager = { workspace = true }
domichain-gossip = { workspace = true }
domichain-ledger = { workspace = true }
domichain-measure = { workspace = true }
domichain-metrics = { workspace = true }
domichain-net-utils = { workspace = true }
domichain-perf = { workspace = true }
domichain-poh = { workspace = true }
domichain-program-runtime = { workspace = true }
domichain-rayon-threadlimit = { workspace = true }
domichain-rpc = { workspace = true }
domichain-rpc-client-api = { workspace = true }
domichain-runtime = { workspace = true }
domichain-sdk = { workspace = true }
domichain-send-transaction-service = { workspace = true }
domichain-streamer = { workspace = true }
domichain-tpu-client = { workspace = true }
domichain-transaction-status = { workspace = true }
domichain-version = { workspace = true }
domichain-vote-program = { workspace = true }
libvrf = { path = "../libvrf", version = "=0.1.0" }
sortition = { path = "../sortition", version = "=0.1.0" }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }
sys-info = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
trees = { workspace = true }

[dev-dependencies]
fs_extra = { workspace = true }
matches = { workspace = true }
raptorq = { workspace = true }
serde_json = { workspace = true }
serial_test = { workspace = true }
domichain-logger = { workspace = true }
domichain-program-runtime = { workspace = true }
domichain-stake-program = { workspace = true }
static_assertions = { workspace = true }
systemstat = { workspace = true }
test-case = { workspace = true }

[target."cfg(unix)".dependencies]
sysctl = { workspace = true }

[build-dependencies]
rustc_version = { workspace = true }

[[bench]]
name = "banking_stage"

[[bench]]
name = "cluster_info"

[[bench]]
name = "gen_keys"

[[bench]]
name = "sigverify_stage"

[[bench]]
name = "retransmit_stage"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
