[package]
authors = ["Domichain Maintainers <maintainers@domichain.foundation>"]
edition = "2021"
name = "domichain-dos"
version = "1.11.1"
repository = "https://Domino-Blockchain/domichain"
license = "Apache-2.0"
homepage = "https://domichain.com/"
publish = false
description = "Tool to send various requests to cluster in order to evaluate the effect on performance"

[dependencies]
bincode = "1.3.3"
clap = {version = "3.1.5", features = ["derive", "cargo"]}
log = "0.4.17"
rand = "0.7.0"
serde = "1.0.137"
itertools = "0.10.3"
domichain-client = { path = "../client", version = "=1.11.1" }
domichain-core = { path = "../core", version = "=1.11.1" }
domichain-gossip = { path = "../gossip", version = "=1.11.1" }
domichain-logger = { path = "../logger", version = "=1.11.1" }
domichain-net-utils = { path = "../net-utils", version = "=1.11.1" }
domichain-perf = { path = "../perf", version = "=1.11.1" }
domichain-sdk = { path = "../sdk", version = "=1.11.1" }
domichain-streamer = { path = "../streamer", version = "=1.11.1" }
domichain-version = { path = "../version", version = "=1.11.1" }
domichain-bench-tps = { path = "../bench-tps", version = "=1.11.1" }
domichain-faucet = { path = "../faucet", version = "=1.11.1" }
domichain-rpc = { path = "../rpc", version = "=1.11.1" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
serial_test = "0.6.0"
domichain-local-cluster = { path = "../local-cluster", version = "=1.11.1" }
