[package]
name = "domichain-dos"
publish = false
description = "Tool to send various requests to cluster in order to evaluate the effect on performance"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
clap = { version = "3.1.5", features = ["derive", "cargo"] }
crossbeam-channel = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
domichain-bench-tps = { workspace = true }
domichain-client = { workspace = true }
domichain-core = { workspace = true }
domichain-faucet = { workspace = true }
domichain-gossip = { workspace = true }
domichain-logger = { workspace = true }
domichain-measure = { workspace = true }
domichain-net-utils = { workspace = true }
domichain-perf = { workspace = true }
domichain-rpc = { workspace = true }
domichain-rpc-client = { workspace = true }
domichain-sdk = { workspace = true }
domichain-streamer = { workspace = true }
domichain-tpu-client = { workspace = true }
domichain-version = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
domichain-local-cluster = { workspace = true }
domichain-thin-client = { workspace = true }
