[package]
name = "domichain-download-utils"
description = "Domichain Download Utils"
documentation = "https://docs.rs/domichain-download-utils"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
console = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "brotli", "deflate", "gzip", "rustls-tls", "json"] }
domichain-runtime = { workspace = true }
domichain-sdk = { workspace = true }

[lib]
crate-type = ["lib"]
name = "domichain_download_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
