[package]
name = "domichain-entry"
description = "Domichain Entry"
documentation = "https://docs.rs/domichain-poh"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
crossbeam-channel = { workspace = true }
dlopen = { workspace = true }
dlopen_derive = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
domichain-measure = { workspace = true }
domichain-merkle-tree = { workspace = true }
domichain-metrics = { workspace = true }
domichain-perf = { workspace = true }
domichain-rayon-threadlimit = { workspace = true }
domichain-sdk = { workspace = true }

[dev-dependencies]
matches = { workspace = true }
domichain-logger = { workspace = true }

[lib]
crate-type = ["lib"]
name = "domichain_entry"

[[bench]]
name = "entry_sigverify"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
