[package]
name = "domichain-faucet"
version = "1.11.1"
description = "Domichain Faucet"
authors = ["Domichain Maintainers <maintainers@domichain.foundation>"]
repository = "https://github.com/domichain-labs/domichain"
license = "Apache-2.0"
homepage = "https://domichain.com/"
documentation = "https://docs.rs/domichain-faucet"
edition = "2021"

[dependencies]
bincode = "1.3.3"
byteorder = "1.4.3"
clap = "2.33"
crossbeam-channel = "0.5"
log = "0.4.17"
serde = "1.0.137"
serde_derive = "1.0.103"
domichain-clap-utils = { path = "../clap-utils", version = "=1.11.1" }
domichain-cli-config = { path = "../cli-config", version = "=1.11.1" }
domichain-logger = { path = "../logger", version = "=1.11.1" }
domichain-metrics = { path = "../metrics", version = "=1.11.1" }
domichain-sdk = { path = "../sdk", version = "=1.11.1" }
domichain-version = { path = "../version", version = "=1.11.1" }
spl-memo = { version = "=3.0.1", features = ["no-entrypoint"] }
thiserror = "1.0"
tokio = { version = "~1.14.1", features = ["full"] }

[lib]
crate-type = ["lib"]
name = "domichain_faucet"

[[bin]]
name = "domichain-faucet"
path = "src/bin/faucet.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
