[package]
name = "domichain-faucet"
description = "Domichain Faucet"
documentation = "https://docs.rs/domichain-faucet"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
byteorder = { workspace = true }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
domichain-clap-utils = { workspace = true }
domichain-cli-config = { workspace = true }
domichain-logger = { workspace = true }
domichain-metrics = { workspace = true }
domichain-sdk = { workspace = true }
domichain-version = { workspace = true }
spl-memo = { workspace = true, features = ["no-entrypoint"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[lib]
crate-type = ["lib"]
name = "domichain_faucet"

[[bin]]
name = "domichain-faucet"
path = "src/bin/faucet.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
