[package]
name = "domichain-genesis-utils"
version = "1.11.1"
description = "Domichain Genesis Utils"
authors = ["Domichain Maintainers <maintainers@domichain.foundation>"]
repository = "https://github.com/domichain-labs/domichain"
license = "Apache-2.0"
homepage = "https://domichain.com/"
documentation = "https://docs.rs/domichain-download-utils"
edition = "2021"

[dependencies]
domichain-download-utils = { path = "../download-utils", version = "=1.11.1" }
domichain-runtime = { path = "../runtime", version = "=1.11.1" }
domichain-sdk = { path = "../sdk", version = "=1.11.1" }

[lib]
crate-type = ["lib"]
name = "domichain_genesis_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
