[package]
name = "domichain-genesis-utils"
description = "Domichain Genesis Utils"
documentation = "https://docs.rs/domichain-download-utils"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
log = { workspace = true }
domichain-download-utils = { workspace = true }
domichain-rpc-client = { workspace = true }
domichain-runtime = { workspace = true }
domichain-sdk = { workspace = true }

[lib]
crate-type = ["lib"]
name = "domichain_genesis_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
