[package]
authors = ["Domichain Maintainers <maintainers@domichain.foundation>"]
edition = "2021"
name = "domichain-genesis"
description = "Blockchain, Rebuilt for Scale"
version = "1.11.1"
repository = "https://Domino-Blockchain/domichain"
license = "Apache-2.0"
homepage = "https://domichain.com/"
documentation = "https://docs.rs/domichain-genesis"

[dependencies]
base64 = "0.13.0"
clap = "2.33.1"
serde = "1.0.137"
serde_json = "1.0.81"
serde_yaml = "0.8.24"
domichain-clap-utils = { path = "../clap-utils", version = "=1.11.1" }
domichain-cli-config = { path = "../cli-config", version = "=1.11.1" }
domichain-entry = { path = "../entry", version = "=1.11.1" }
domichain-ledger = { path = "../ledger", version = "=1.11.1" }
domichain-logger = { path = "../logger", version = "=1.11.1" }
domichain-runtime = { path = "../runtime", version = "=1.11.1" }
domichain-sdk = { path = "../sdk", version = "=1.11.1" }
domichain-stake-program = { path = "../programs/stake", version = "=1.11.1" }
domichain-version = { path = "../version", version = "=1.11.1" }
domichain-vote-program = { path = "../programs/vote", version = "=1.11.1" }
tempfile = "3.3.0"

[[bin]]
name = "domichain-genesis"
path = "src/main.rs"

[lib]
name = "domichain_genesis"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
