[package]
name = "domichain-genesis"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/domichain-genesis"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
base64 = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
domichain-clap-utils = { workspace = true }
domichain-cli-config = { workspace = true }
domichain-entry = { workspace = true }
domichain-ledger = { workspace = true }
domichain-logger = { workspace = true }
domichain-runtime = { workspace = true }
domichain-sdk = { workspace = true }
domichain-stake-program = { workspace = true }
domichain-version = { workspace = true }
domichain-vote-program = { workspace = true }
tempfile = { workspace = true }

[[bin]]
name = "domichain-genesis"
path = "src/main.rs"

[lib]
name = "domichain_genesis"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
