[package]
authors = ["Domichain Maintainers <maintainers@domichain.foundation>"]
edition = "2021"
name = "domichain-geyser-plugin-interface"
description = "The Domichain Geyser plugin interface."
version = "1.11.1"
repository = "https://Domino-Blockchain/domichain"
license = "Apache-2.0"
homepage = "https://domichain.com/"
documentation = "https://docs.rs/domichain-geyser-plugin-interface"

[dependencies]
log = "0.4.17"
domichain-sdk = { path = "../sdk", version = "=1.11.1" }
domichain-transaction-status = { path = "../transaction-status", version = "=1.11.1" }
thiserror = "1.0.31"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
