[package]
name = "domichain-geyser-plugin-interface"
description = "The Domichain Geyser plugin interface."
documentation = "https://docs.rs/domichain-geyser-plugin-interface"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
log = { workspace = true }
domichain-sdk = { workspace = true }
domichain-transaction-status = { workspace = true }
thiserror = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
