[package]
authors = ["Domichain Maintainers <maintainers@domichain.foundation>"]
edition = "2021"
name = "domichain-geyser-plugin-manager"
description = "The Domichain Geyser plugin manager."
version = "1.11.1"
repository = "https://github.com/domichain-labs/domichain"
license = "Apache-2.0"
homepage = "https://domichain.com/"
documentation = "https://docs.rs/domichain-geyser-plugin-manager"

[dependencies]
bs58 = "0.4.0"
crossbeam-channel = "0.5"
json5 = "0.4.1"
libloading = "0.7.3"
log = "0.4.17"
serde_json = "1.0.81"
domichain-geyser-plugin-interface = { path = "../geyser-plugin-interface", version = "=1.11.1" }
domichain-measure = { path = "../measure", version = "=1.11.1" }
domichain-metrics = { path = "../metrics", version = "=1.11.1" }
domichain-rpc = { path = "../rpc", version = "=1.11.1" }
domichain-runtime = { path = "../runtime", version = "=1.11.1" }
domichain-sdk = { path = "../sdk", version = "=1.11.1" }
domichain-transaction-status = { path = "../transaction-status", version = "=1.11.1" }
thiserror = "1.0.31"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
