[package]
name = "domichain-geyser-plugin-manager"
description = "The Domichain Geyser plugin manager."
documentation = "https://docs.rs/domichain-geyser-plugin-manager"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]

bs58 = { workspace = true }
crossbeam-channel = { workspace = true }
json5 = { workspace = true }
jsonrpc-core = { workspace = true }
jsonrpc-server-utils = { workspace = true }
libloading = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
domichain-entry = { workspace = true }
domichain-geyser-plugin-interface = { workspace = true }
domichain-ledger = { workspace = true }
domichain-measure = { workspace = true }
domichain-metrics = { workspace = true }
domichain-rpc = { workspace = true }
domichain-runtime = { workspace = true }
domichain-sdk = { workspace = true }
domichain-transaction-status = { workspace = true }
thiserror = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
